fixed some style z-index issue and changed logo

--- a/src/style/desktop.css
+++ b/src/style/desktop.css
@@ -18,6 +18,7 @@
     height: 100px;
     border: 3px solid black;
     border-radius: 5px;
+    z-index: 3;
 }
 
 #title {
@@ -29,7 +30,7 @@
     margin-left:5%;
     height: 48px;
     line-height: 48px;
-    font-size: 46px;
+    font-size: 36px;
     text-align: center;
 }
 
